<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Quote Unquote</string>
    <string name="activity_instructions_title">Instructions</string>
    <string name="activity_instructions_placement">Widget Placement</string>
    <string name="activity_instructions_bullet">\u2022</string>
    <string name="activity_instructions_1">On a home screen, touch and hold an empty space</string>
    <string name="activity_instructions_2">Select Widgets</string>
    <string name="activity_instructions_3">Scroll though the widgets until you find the Quote Unquote widget</string>
    <string name="activity_instructions_4">Touch and slide the widget to where you want it. Lift your finger</string>
    <string name="activity_instructions_5">Use Android\’s Back button / gesture to leave the Configure screen and place the widget on home screen</string>
    <string name="activity_instructions_usage">Usage</string>
    <string name="activity_instructions_configure_1">Tap Quotation text to configure widget</string>
    <string name="activity_instructions_configure_2">Changes are saved when the Configure screen is exited with the Back button / gesture</string>
    <string name="activity_instructions_configure_3">Tap an <u>underlined</u> Source for Wikipedia entry</string>
    <string name="activity_instructions_configure_4">The \u2316 icon, next to the Quotation position count, denotes your previous Quotation</string>
    <string name="activity_instructions_configure_5">Only, the optional, Web import &amp; Cloud sync require an Internet connection</string>
    <string name="activity_instructions_configure_6">Revisit the Notifications page to reinitialise notifications after device restart</string>
    <string name="activity_instructions_os_warning">Some Android versions have aggressive memory management, adjust device accordingly</string>
    <string name="activity_instructions_resize">Widget Resizing</string>
    <string name="activity_instructions_resize_instruction_1">Touch and hold the widget on home screen</string>
    <string name="activity_instructions_resize_instruction_2">Lift your finger. You\’ll find an outline with dots on the sides</string>
    <string name="activity_instructions_resize_instruction_3">To resize the widget, drag the dots</string>
    <string name="activity_instructions_resize_instruction_4">When you\’re done, tap outside the widget</string>
    <string name="activity_instructions_version">%1$s/%2$s</string>
    <string name="activity_instructions_oss">Open-source software</string>
    <string name="configure_navigation_bar_quotations">Quotations</string>
    <string name="configure_navigation_bar_appearance">Appearance</string>
    <string name="settings">Configure</string>
    <string name="fragment_quotations_title">Quotations</string>
    <string name="fragment_quotations_selection">Filter</string>
    <string name="fragment_quotations_selection_all"><b>All: %d</b></string>
    <string name="fragment_quotations_selection_exclusion_instructions">Source exclusion…</string>
    <string name="fragment_quotations_selection_exclusion_info"></string>
    <string name="fragment_quotations_selection_exclusion_1">\u2022&#160;&#160;4 characters minimum; case insensitive; semicolon separator</string>
    <string name="fragment_quotations_selection_exclusion_2">\u2022&#160;&#160;Example: exclude Shakespeare: shak;</string>
    <string name="fragment_quotations_selection_all_ascending">Ascending Source Count</string>
    <string name="fragment_quotations_selection_all_ascending_info">\u2022&#160;&#160;Start with the Source with the least quotations; end with the Source with the most; any existing Previous is preserved</string>
    <string name="fragment_quotations_selection_author"><b>Source: %d</b></string>
    <string name="fragment_quotations_selection_author_count">Count &gt;=</string>
    <string name="fragment_quotations_selection_author_name">Selected Source</string>
    <string name="fragment_quotations_selection_favourites"><b>Favourites: %d</b></string>
    <string name="fragment_quotations_selection_browse">Browse</string>
    <string name="fragment_quotations_selection_export_button">Export</string>
    <string name="fragment_quotations_selection_export_success">Success - export completed</string>
    <string name="fragment_quotations_selection_export_failed">Export failed</string>
    <string name="fragment_quotations_selection_search"><b>Search: %d</b></string>
    <string name="fragment_quotations_selection_search_favourites_only">Favourites only</string>
    <string name="fragment_quotations_selection_search_instructions_text">Search text…</string>
    <string name="fragment_quotations_selection_search_switch_regex">Regular expression</string>
    <string name="fragment_quotations_selection_search_instructions_info"></string>
    <string name="fragment_quotations_selection_search_instructions_1">\u2022&#160;&#160;Search includes both Quotation &amp; Source</string>
    <string name="fragment_quotations_selection_search_instructions_2">\u2022&#160;&#160;4 characters minimum; regular expressions are case sensitive, can take time but results get cached</string>
    <string name="fragment_quotations_selection_search_instructions_3">\u2022&#160;&#160;Regular expression example: .*(Aristotle|Sun Tzu).*</string>
    <string name="fragment_quotations_selection_search_no_results">No results found for Search</string>
    <string name="fragment_quotations_selection_dialog_browse_favourites">Favourites</string>
    <string name="fragment_quotations_selection_dialog_browse_share_and_toggle_01">\u2022&#160;&#160;Tap to share; Long tap to toggle favourite</string>
    <string name="fragment_quotations_database">Content</string>
    <string name="fragment_quotations_database_default_internal">Internal database</string>
    <string name="fragment_quotations_database_default_info"></string>
    <string name="fragment_quotations_database_default_0">\u2022&#160;&#160;Discover High Quality Quotations!</string>
    <string name="fragment_quotations_database_file">External File</string>
    <string name="fragment_quotations_database_file_inplace_edit">Edit</string>
    <string name="fragment_quotations_database_file_inplace_export">Export</string>
    <string name="fragment_quotations_database_file_csv">CSV</string>
    <string name="fragment_quotations_database_file_csv_inplace_source">Source…</string>
    <string name="fragment_quotations_database_file_csv_inplace_quotation">Quotation…</string>
    <string name="fragment_quotations_database_file_csv_inplace_save">Save</string>
    <string name="fragment_quotations_database_file_csv_inplace_delete">Delete</string>
    <string name="fragment_quotations_database_file_csv_inplace_instruction_01">\u2022&#160;&#160;Tap row text to select / deselect</string>
    <string name="fragment_quotations_database_file_csv_inplace_instruction_02">\u2022&#160;&#160;If no row selected, Save will insert / append based on Source, Quotation order</string>
    <string name="fragment_quotations_database_file_csv_inplace_save_warning_duplicate">Unable to Save - duplicate</string>
    <string name="fragment_quotations_database_file_csv_inplace_warning_empty_database">Internal database selected</string>
    <string name="fragment_quotations_database_file_fortune">Fortune</string>
    <string name="fragment_quotations_database_file_fortune_info_01">\u2022&#160;&#160;See https://wikipedia.org/wiki/Fortune_(Unix)</string>
    <string name="fragment_quotations_database_file_fortune_info_02">\u2022&#160;&#160;The filename is used to populate the Source field</string>
    <string name="fragment_quotations_database_file_warning">\u2022&#160;&#160;Use Export to backup data prior to any reinstall</string>
    <string name="fragment_quotations_database_button_import">Import</string>
    <string name="fragment_quotations_database_external_instructions_1_info"></string>
    <string name="fragment_quotations_database_external_instructions_0">\u2022&#160;&#160;Source||Quotation per line; duplicates are ignored</string>
    <string name="fragment_quotations_database_external_instructions_1">\u2022&#160;&#160;Export from Internal database for UTF-8 encoded example</string>
    <string name="fragment_quotations_database_import_contents_0">Invalid - %1$s</string>
    <string name="fragment_quotations_database_import_contents_1">Invalid - line: %1$d: %2$s</string>
    <string name="fragment_quotations_database_import_importing">Importing - please wait&#8230;</string>
    <string name="fragment_quotations_database_import_success">Success - file imported</string>
    <string name="fragment_quotations_database_scrape_web_page">Web</string>
    <string name="fragment_quotations_database_scrape_url_hint" tools:ignore="TypographyEllipsis">URL http / https…</string>
    <string name="fragment_quotations_database_scrape_quote_quotation_hint" tools:ignore="TypographyEllipsis">Quotation XPath text node…</string>
    <string name="fragment_quotations_database_scrape_quote_source_hint" tools:ignore="TypographyEllipsis">Source XPath text node…</string>
    <string name="fragment_quotations_database_scrape_erase">Keep latest response only</string>
    <string name="fragment_quotations_database_scrape_fields_error_incomplete">Incomplete parameters</string>
    <string name="fragment_quotations_database_scrape_importing">Importing web page - please wait&#8230;</string>
    <string name="fragment_quotations_database_scrape_endpoint_error">Unable to contact URL</string>
    <string name="fragment_quotations_database_scrape_xpath_error_quotation">Invalid quotation XPath</string>
    <string name="fragment_quotations_database_scrape_xpath_error_source">Invalid source XPath</string>
    <string name="fragment_quotations_database_scrape_test_success">Success - web page imported</string>
    <string name="fragment_quotations_database_scrape_info"></string>
    <string name="fragment_quotations_database_scrape_1">\u2022&#160;&#160;HTML 5 compatible response expected, do not use the word <b>source</b> in the response</string>
    <string name="fragment_appearance_toolbar_first">First, clears Previous</string>
    <string name="fragment_appearance_toolbar_previous">Previous</string>
    <string name="fragment_appearance_toolbar_favourite">Favourite, toggle</string>
    <string name="fragment_appearance_toolbar_share">Share</string>
    <string name="fragment_appearance_toolbar_next_sequential">Next, sequential</string>
    <string name="fragment_appearance_toolbar_position_indicator">Jump, Previous</string>
    <string name="fragment_appearance_toolbar_next_random">Next, random</string>
    <string name="fragment_archive_select_cloud">Cloud (GCP)</string>
    <string name="fragment_archive_select_cloud_info">\u2022&#160;&#160;GCP limited to 1MB maximum size</string>
    <string name="fragment_archive_select_filesystem">Device</string>
    <string name="fragment_archive_backup_local_code">Sync code…</string>
    <string name="fragment_archive_backup_local_code_value">%s</string>
    <string name="fragment_archive_backup">Backup</string>
    <string name="fragment_archive_restore">Restore</string>
    <string name="fragment_archive_superseded_info"></string>
    <string name="fragment_archive_superseded_1">\u2022&#160;&#160;Sync code is superseded upon restore</string>
    <string name="fragment_archive_create_new_sync_code">New code</string>
    <string name="fragment_archive_sync_to_cloud_on_favourite">Auto backup</string>
    <string name="fragment_archive_sync_to_cloud_on_favourite_most_recent">Last backup: %s</string>
    <string name="fragment_archive_sync_to_cloud_on_favourite_info_0">\u2022&#160;&#160;Toggle a favourite to invoke</string>
    <string name="widget_listview_quotation">Quotation</string>
    <string name="widget_listview_author">Source</string>
    <string name="widget_listview_position">Position</string>
</resources>