<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayoutTheme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/quote_unquote_widget_rounded_corners_night"
        android:orientation="vertical"
        tools:viewBindingIgnore="true">

    <LinearLayout
            android:id="@+id/linearLayoutQuotation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:gravity="center"
            android:orientation="vertical">

        <ListView
                android:id="@+id/listViewQuotation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:drawSelectorOnTop="false"
                android:paddingVertical="2dp" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayoutToolbar"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

        <ImageButton
                android:id="@+id/imageButtonFirst"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:contentDescription="@string/fragment_appearance_toolbar_first"
                android:src="@drawable/ic_toolbar_first_24"
                android:visibility="gone" />

        <ImageButton
                android:id="@+id/imageButtonPrevious"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:contentDescription="@string/fragment_appearance_toolbar_previous"
                android:src="@drawable/ic_toolbar_previous_24" />

        <ImageButton
                android:id="@+id/imageButtonFavourite"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:contentDescription="@string/fragment_appearance_toolbar_favourite"
                android:src="@drawable/ic_toolbar_favorite_24" />

        <ImageButton
                android:id="@+id/imageButtonShare"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:contentDescription="@string/fragment_appearance_toolbar_share"
                android:src="@drawable/ic_toolbar_share_24" />

        <ImageButton
                android:id="@+id/imageButtonJump"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:contentDescription="@string/fragment_appearance_toolbar_position_indicator"
                android:src="@drawable/ic_toolbar_jump_24"
                android:visibility="gone" />

        <ImageButton
                android:id="@+id/imageButtonNextSequential"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:contentDescription="@string/fragment_appearance_toolbar_next_sequential"
                android:src="@drawable/ic_toolbar_next_sequential_24"
                android:visibility="gone" />

        <ImageButton
                android:id="@+id/imageButtonNextRandom"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:contentDescription="@string/fragment_appearance_toolbar_next_random"
                android:src="@drawable/ic_toolbar_next_random_24" />

    </LinearLayout>

</LinearLayout>