<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
            android:id="@+id/textViewRowQuotation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/widget_listview_quotation"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

    <TextView
            android:id="@+id/textViewRowAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/widget_listview_author"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

    <TextView
            android:id="@+id/textViewRowPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/widget_listview_position"
            android:fontFamily="sans-serif-medium"
            android:gravity="end"
            android:minHeight="10.dp"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

</LinearLayout>
